sunuo (0.4.3) unstable; urgency=low

  * make automatic world save interval configurable, patch by Maik Greubel
  * documentation updates
    - server-list configuration
  * manual locking
    - TimerChangeEntry.m_InstancePool
    - NetState.m_Disposed

 --

sunuo (0.4.2) unstable; urgency=low

  * added interface IPacket, implemented by class Packet
  * implemented abstract packet recycler code
    - recycle MobileMoving
  * continued memory optimizations
    - eliminated most DateTime.Now calls
    - all other DateTime.Now calls are converted to DateTime.UtcNow to avoid
      time zone lookups
    - reuse timer in spawner engine
    - early return when HarrowerTentacles have no drain targets
    - reuse TimerChangeEntry objects
    - NameList: trim strings in initialization, not on every request
  * manual synchronization of TimerThread.m_ChangeQueue
  * obsolete APIs
    - Core.ExePath
    - Core.BaseDirectory
    - ScriptCompiler.Assemblies
    - CrashedEventArgs.Close
  * moved filesystem paths from Core to Core.Config
    - LogDirectory
    - CacheDirectory
  * removed Core.LocalDirectoryInfo, Core.BaseDirectoryInfo
  * login: removed EventSink.Crashed

 -- Max Kellermann <max@duempel.org>  Fri,  5 Jan 2007 00:53:42 +0100

sunuo (0.4.1) unstable; urgency=low

  * lock m_Accounts in Accounting.Accounts
  * fixed account database corruption bug
  * show correct client number in disconnect message

 -- Max Kellermann <max@duempel.org>  Mon, 25 Dec 2006 01:46:23 +0100

sunuo (0.4.0) unstable; urgency=low

  * implemented a main loop profiler
  * refuse to load objects with serial -1
  * transactional world save
  * non-interactive world repair
  * reserve 10% space in mobile/item hash tables
  * script debugging is always enabled
  * explicit TileData initialization
  * added Config.Network
    - configure Listeners
  * Listener.Slice() returns null when idle
  * ScriptCompiler ignores control directories of common revision control
    systems